test/language/spec/pipeline/invalid/pipeline_undeclared_node.topo
// TEST: pipeline references undeclared function
// EXPECT-ERROR: undeclared

namespace app {
  public:
    void run();
    fn run {
      a -> ghost;
      ghost -> void;
    }

  protected:
    void a();
}
